sap-cloud/1.0/index.md
---
title: Alfresco Content Connector for SAP Cloud
---

The Alfresco Content Connector for SAP Cloud is an add-on module that offers seamless integration between Alfresco Content Services and SAP S/4HANA Cloud as well as on-premises through the SAP Document Management Service (via the CMIS protocol). It allows you to manage SAP related documents within an SAP environment while the documents are actually stored in Alfresco Content Services.

Here is a summary of the key capabilities:

* Support SAP S/4HANA on-premises
* Manage documents in SAP via CMIS and SAP Attachment Services
* Manage documents for SAP Material
* Create folder structure in Alfresco Content Services

> **Important:** The SAP Cloud Connector module can be applied to several versions of Content Services. See [Prerequisites]({% link sap-cloud/1.0/install/index.md %}#prerequisites) and [Supported Platforms]({% link sap-cloud/1.0/support/index.md %}) for more.

> **Note:** This documentation only covers how to use Content Services with the SAP Cloud Connector.
